--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@formspree/react": "^3.0.0",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
